Fix display gap on hero images
Force hero images enclosed in <figure> to stay within the .container
when the page is scrolled on larger screens.

--- a/style/scss/_type.scss
+++ b/style/scss/_type.scss
@@ -254,6 +254,9 @@ ul{
 // Figures
 // -------
 
+figure {
+  display: block !important;// Ensures hero images enclosed in <figure> stay within the .container
+}
 // Force center alignment of featured images
 .featured-img {
   margin-left: auto !important;
